fix produc slider

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <!-- Start: paralex -->
     <section style="margin-top: 50px;">
         <!-- Start: Parallax Background -->
-        <div data-bss-parallax-bg="true" style="height: 500px;background: url(&quot;assets/img/diego-lozano-mE6kjov4rTg-unsplash.jpg&quot;) center / cover no-repeat;">
+        <div data-bss-parallax-bg="true" style="height: 500px;background-image: url(&quot;assets/img/diego-lozano-mE6kjov4rTg-unsplash.jpg&quot;);background-position: center;background-size: cover;">
             <div class="container h-100"><i class="far fa-play-circle d-flex d-lg-flex justify-content-center align-items-center align-content-center align-self-center justify-content-lg-center align-items-lg-center" data-aos="zoom-in-up" data-aos-duration="700" style="font-size: 105px;color: var(--bs-white);padding-top: 200px;"></i></div>
         </div><!-- End: Parallax Background -->
     </section><!-- End: paralex -->
@@ -174,7 +174,7 @@
                         <h2 class="fw-bold mb-2" data-aos="fade-right" data-aos-delay="650">Biben dum fringi dictum, augue purus</h2>
                         <p data-aos="fade-right" data-aos-delay="700" class="mb-0">Imperdiet consectetur dolor, tristique himenaeos ultrices tristique neque.</p>
                     </div>
-                    <div class="my-2"><a class="btn btn-light fs-5 py-2 px-4" role="button" data-aos="fade-right" data-aos-delay="800" href="#">Button</a></div>
+                    <div class="my-2"><a class="btn fs-5 py-2 px-4" role="button" data-aos="fade-right" data-aos-delay="800" href="#" style="background: var(--bs-orange);color: rgb(255,255,255);">MENU</a></div>
                 </div>
             </div>
         </section><!-- End: Banner Color -->
@@ -182,11 +182,11 @@
     <!-- Start: prod slider -->
     <section class="d-lg-flex justify-content-lg-center">
         <!-- Start: Responsive Product Slider -->
-        <div class="carousel slide d-lg-flex justify-content-lg-center" data-bs-ride="carousel" data-bs-interval="8000" data-bs-pause="false" id="carousel-top-margin" style="width: 985px;">
+        <div class="carousel slide d-lg-flex justify-content-lg-center" data-bs-ride="carousel" data-bs-interval="8000" data-bs-pause="false" id="carousel-top-margin" style="width: 100%;">
             <div class="carousel-inner">
                 <div class="carousel-item active" style="background: #ffffff;">
                     <div class="row g-0 slider-row">
-                        <div class="col-sm-6 col-md-3 col-lg-3 col-xl-3 col-xxl-3 offset-sm-0" data-aos="fade-up" data-aos-delay="200">
+                        <div class="col" data-aos="fade-up" data-aos-delay="200">
                             <!-- Start: #1 -->
                             <div class="card">
                                 <div class="card-body text-center" style="border-width: 0px !important;background: url(&quot;assets/img/bland-mc-pic.png&quot;), url(&quot;assets/img/1.jpg.png&quot;) top / cover no-repeat, #eaeaea;border-radius: 15px;margin-bottom: 10px;height: 300px;"><button class="btn" type="button" style="min-width: 100%;margin-top: 220px;background: var(--bs-orange);color: rgb(255,255,255);">ORDER NOW</button></div>
